# djnago_tutorial

./: README.md  setup.sh
django_my_laboratory/: .gitignore  README.md  manage.py  pyproject.toml
django_my_laboratory/django_my_laboratory/: asgi.py  settings.py  urls.py  wsgi.py
django_my_laboratory/form/: admin.py  models.py  urls.py
django_my_laboratory/form/fixtures/: fixture_department.json  fixture_employee.json  fixture_position.json  fixture_skill.json  fixture_skillcategory.json
django_my_laboratory/form/views/: post_model_formset.py
django_my_laboratory/shell/: dump_fixture_form.sh  load_fixture_form.sh  remove_db.sh  start_app.sh
django_my_laboratory/templates/: base.html
django_my_laboratory/templates/form/: post_model_formset.html
django_tutorial/: README.md  pyproject.toml
django_tutorial/mysite/: db.sqlite3
django_tutorial/mysite/mysite/: settings.py
django_tutorial/mysite/polls/: admin.py  models.py  tests.py
django_tutorial/mysite/polls/migrations/: 0001_initial.py
mysite/: db.sqlite3
mysite/mysite/: settings.py
mysite/polls/: models.py  urls.py  views.py
udemy_django-3app/: .gitignore  README.md  memo.md
udemy_django-3app/boardproject/: db.sqlite3  pyproject.toml
udemy_django-3app/hello/: pyproject.toml
udemy_django-3app/hello/helloworldproject/: db.sqlite3
udemy_django-3app/hello/helloworldproject/helloworldapp/: urls.py  views.py
udemy_django-3app/hello/helloworldproject/helloworldproject/: settings.py  urls.py  views.py
udemy_django-3app/todoproject/: db.sqlite3  pyproject.toml
(+24 files in other folders)
