[tool.poetry]
name = "django_tutorial"
version = "0.1.0"
description = ""
authors = ["mitty1293 <k.fmichi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
